# src/app/api/api.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: Testing
-  version: 1.0.11
+  version: 1.0.0
 servers:
   - url: "http://localhost:8888/api/v1"
     description: Running locally
@@ -12,6 +12,22 @@ paths:
         - user
       summary: Get Users
       operationId: getUsers
+      parameters:
+        - in: query
+          name: offset
+          schema:
+            type: integer
+          description: The number of items to skip before starting to collect the result set
+        - in: query
+          name: limit
+          schema:
+            type: integer
+          description: The numbers of items to return
+        - in: query
+          name: sort
+          schema:
+            type: string
+          description: Sort by this field
       responses:
         default:
           description: successful operation
@@ -31,6 +47,8 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Users'
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: Successful operation
@@ -40,26 +58,17 @@ paths:
                 $ref: '#/components/schemas/UsersAdded'
         '400':
           description: Invalid input
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ServerError'
+        '401':
+          description: Unauthorized
         '500':
           description: Internal Server Error
 components:
+  securitySchemes:
+    bearerAuth:            # arbitrary name for the security scheme
+      type: http
+      scheme: bearer
+      bearerFormat: JWT 
   schemas:
-    ServerError:
-      type: object
-      required:
-        - type
-        - msg
-      properties:
-        type:
-          type: string
-          example: "InputValidation"
-        msg:
-          type: string
-          example: "Key: 'User.Email' Error:Field validation for 'Email' failed on the 'required' tag"
     User:
       type: object
       required:
