# src/app/api/types.go
@@ -3,11 +3,9 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.13.0 DO NOT EDIT.
 package api
 
-// ServerError defines model for ServerError.
-type ServerError struct {
-	Msg  string `json:"msg"`
-	Type string `json:"type"`
-}
+const (
+	BearerAuthScopes = "bearerAuth.Scopes"
+)
 
 // User defines model for User.
 type User struct {
@@ -25,6 +23,18 @@ type UsersAdded struct {
 	NumExisted   int    `json:"numExisted"`
 	NumRequested int    `json:"numRequested"`
 	Status       string `json:"status"`
+}
+
+// GetUsersParams defines parameters for GetUsers.
+type GetUsersParams struct {
+	// Offset The number of items to skip before starting to collect the result set
+	Offset *int `form:"offset,omitempty" json:"offset,omitempty"`
+
+	// Limit The numbers of items to return
+	Limit *int `form:"limit,omitempty" json:"limit,omitempty"`
+
+	// Sort Sort by this field
+	Sort *string `form:"sort,omitempty" json:"sort,omitempty"`
 }
 
 // AddUsersJSONRequestBody defines body for AddUsers for application/json ContentType.
